--- a/package.json
+++ b/package.json
@@ -2,51 +2,49 @@
     "name": "student-assistant-web",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "prisma:migrate": "dotenv -e .env.local -- prisma migrate dev --schema=prisma/schema.prisma",
+        "prisma:deploy": "dotenv -e .env.local -- prisma migrate deploy --schema=prisma/schema.prisma",
+        "prisma:studio": "dotenv -e .env.local -- prisma studio --schema=prisma/schema.prisma",
+        "prisma:generate": "dotenv -e .env.local -- prisma generate --schema=prisma/schema.prisma",
+        "prisma:seed": "dotenv -e .env.local -- node prisma/seed.js"
     },
     "dependencies": {
-        "@prisma/client": "^6.16.2",
+        "@prisma/client": "^6.17.0",
         "bcrypt": "^6.0.0",
-        "bcryptjs": "^3.0.2",
         "cookie": "^0.6.0",
         "dotenv": "^17.2.2",
-        "g4f": "^1.4.6",
         "jsonwebtoken": "^9.0.2",
         "next": "^15.5.3",
         "openai": "^5.22.0",
-        "prisma": "^6.16.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "recharts": "^3.2.1"
     },
     "devDependencies": {
-        "@types/babel__traverse": "^7.28.0",
         "@types/bcrypt": "^6.0.0",
         "@types/cookie": "^0.6.0",
-        "@types/estree": "^1.0.8",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.5.2",
         "@types/react": "^18.3.24",
         "@types/react-dom": "^18.3.7",
-        "@vitejs/plugin-react": "^4.0.0",
         "autoprefixer": "^10.4.21",
+        "dotenv-cli": "^10.0.0",
         "eslint": "^8.57.1",
         "eslint-config-next": "^15.5.3",
         "postcss": "^8.5.6",
         "prettier": "^2.8.0",
+        "prisma": "^6.17.0",
         "tailwindcss": "^3.4.17",
         "ts-node": "^10.9.2",
-        "typescript": "^5.9.2",
-        "vite": "^5.0.0"
+        "typescript": "^5.9.2"
     },
-    "description": "",
-    "main": "index.js",
-    "keywords": [],
+    "license": "MIT",
     "author": "",
-    "license": "ISC",
-    "type": "commonjs"
+    "description": "Adaptive learning web platform for personalized educational content using Next.js, Prisma, and OpenAI"
 }
