--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "cookie": "^0.6.0",
         "dotenv": "^17.2.2",
         "jsonwebtoken": "^9.0.2",
+        "lucide-react": "^0.545.0",
         "next": "^15.5.3",
+        "next-themes": "^0.4.6",
         "openai": "^5.22.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
