--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
         "prisma:studio": "dotenv -e .env.local -- prisma studio --schema=prisma/schema.prisma",
         "prisma:generate": "dotenv -e .env.local -- prisma generate --schema=prisma/schema.prisma",
         "prisma:seed": "dotenv -e .env.local -- node prisma/seed.js",
-        "postinstall": "prisma generate"
+        "postinstall": "prisma generate",
+        "pack": "node scripts/pack.mjs",
+        "pack:clean": "node scripts/pack.mjs --clean"
     },
     "dependencies": {
         "@prisma/client": "^6.17.0",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.19",
         "bcrypt": "^6.0.0",
         "cookie": "^0.6.0",
         "dotenv": "^17.2.2",
+        "framer-motion": "^10.18.0",
         "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.545.0",
         "next": "^15.5.3",
@@ -34,18 +39,20 @@
         "@types/cookie": "^0.6.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.5.2",
-        "@types/react": "^18.3.24",
+        "@types/react": "^18.3.26",
         "@types/react-dom": "^18.3.7",
+        "archiver": "^7.0.1",
         "autoprefixer": "^10.4.21",
         "dotenv-cli": "^10.0.0",
         "eslint": "^8.57.1",
         "eslint-config-next": "^15.5.3",
+        "fast-glob": "^3.3.3",
         "postcss": "^8.5.6",
         "prettier": "^2.8.0",
         "prisma": "^6.17.0",
         "tailwindcss": "^3.4.17",
         "ts-node": "^10.9.2",
-        "typescript": "^5.9.2"
+        "typescript": "^5.9.3"
     },
     "license": "MIT",
     "author": "",
