--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/typography": "^0.5.19",
         "bcrypt": "^6.0.0",
+        "bcryptjs": "^3.0.2",
         "cookie": "^0.6.0",
         "dotenv": "^17.2.2",
         "framer-motion": "^10.18.0",
@@ -52,6 +53,7 @@
         "prisma": "^6.17.0",
         "tailwindcss": "^3.4.17",
         "ts-node": "^10.9.2",
+        "tsx": "^4.20.6",
         "typescript": "^5.9.3"
     },
     "license": "MIT",
